3.0b crash after splitting area #92655

Closed
opened 2021-10-30 19:19:09 +02:00 by Martin Capitanio · 11 comments

System Information
Operating system: Linux
Graphics card: AMD

Blender Version
Broken: 3.0 Hash fcf1ba18f0
Worked: 2.93.5
Caused by 5bfe09df22

Exact steps for others to reproduce the error
Start blender blender3 --factory-startup
Open the attached .blend file and e.g. try to horizontal split the left 3D-Viewport.

# Blender 3.0.0, Commit date: 2021-10-29 18:17, Hash fcf1ba18f0c4

# backtrace
blender3(BLI_system_backtrace+0x20) [0xb08b6b0]
blender3() [0x10b636b]
/lib/x86_64-linux-gnu/libc.so.6(+0x46210) [0x7ff74e712210]
blender3() [0x9047cb7]
blender3(BKE_spacedata_copylist+0x54) [0x11957d4]
blender3(ED_area_data_copy+0xb3) [0x1c13cb3]
blender3(area_split+0x173) [0x1c1b4a3]
blender3() [0x1c245dd]
blender3() [0x1c2507b]
blender3() [0x14b5a8a]
blender3() [0x14b6d8f]
blender3() [0x14b743d]
blender3(wm_event_do_handlers+0x42e) [0x14b7bae]
blender3(WM_main+0x20) [0x14ad760]
blender3(main+0x31e) [0xf9f3fe]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3) [0x7ff74e6f30b3]
blender3() [0x10b2ccc]

# Python backtrace
**System Information** Operating system: Linux Graphics card: AMD **Blender Version** Broken: 3.0 Hash fcf1ba18f0c4 Worked: 2.93.5 Caused by 5bfe09df22 **Exact steps for others to reproduce the error** Start blender `blender3 --factory-startup` Open the attached .blend file and e.g. try to horizontal split the left 3D-Viewport. ```cat /tmp/crash-test.crash.txt # Blender 3.0.0, Commit date: 2021-10-29 18:17, Hash fcf1ba18f0c4 # backtrace blender3(BLI_system_backtrace+0x20) [0xb08b6b0] blender3() [0x10b636b] /lib/x86_64-linux-gnu/libc.so.6(+0x46210) [0x7ff74e712210] blender3() [0x9047cb7] blender3(BKE_spacedata_copylist+0x54) [0x11957d4] blender3(ED_area_data_copy+0xb3) [0x1c13cb3] blender3(area_split+0x173) [0x1c1b4a3] blender3() [0x1c245dd] blender3() [0x1c2507b] blender3() [0x14b5a8a] blender3() [0x14b6d8f] blender3() [0x14b743d] blender3(wm_event_do_handlers+0x42e) [0x14b7bae] blender3(WM_main+0x20) [0x14ad760] blender3(main+0x31e) [0xf9f3fe] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3) [0x7ff74e6f30b3] blender3() [0x10b2ccc] # Python backtrace ```

Added subscriber: @capnm

Added subscriber: @capnm

#92667 was marked as duplicate of this issue

#92667 was marked as duplicate of this issue
[crash-test.blend](https://archive.blender.org/developer/F11623972/crash-test.blend)
Member

Added subscriber: @Harley19873

Added subscriber: @Harley19873
Member

Added subscriber: @Harley
Removed subscriber: @Harley19873

Added subscriber: @Harley Removed subscriber: @Harley19873
Member

Added subscribers: @Alaska, @deadpin, @JacquesLucke

Added subscribers: @Alaska, @deadpin, @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Harley Acheson self-assigned this 2021-11-01 00:59:12 +01:00

This issue was referenced by adc540cf7c

This issue was referenced by adc540cf7ccfa665fda4c387c26760cf5d60ebba

This issue was referenced by 69e5042258

This issue was referenced by 69e504225804c0ce6ad60ffc90a78bbba93c5c1c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#92655
No description provided.